Version handling in pom file